# Research-Intelligence-System-

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: evaluation.yml
api/: main.py
api/routes/: __init__.py  evaluate.py  health.py  search.py  upload.py
chunking/: section_chunker.py
configs/: config_manager.py  retrieval.yaml
database/: connection.py
database/schemas/: chunks.sql  evaluations.sql  papers.sql
embeddings/: batch_embedding.py  embedder.py  embedding_models.py
evaluation/: evaluation_runner.py  ragas_runner.py
evaluation/metrics/: answer_relevancy.py  context_precision.py  faithfulness.py  retrieval_metrics.py
generation/: answer_generator.py  citation_formatter.py  llm_factory.py  prompt_loader.py
indexing/: chroma_store.py  index_builder.py  postgres_store.py
ingestion/: equation_parser.py  ingestion_pipeline.py  parser_router.py  pdf_parser.py  section_extractor.py  table_parser.py
monitoring/: langsmith_tracker.py  latency_tracker.py  logger.py  query_tracker.py
retrieval/: bm25_retriever.py  context_packer.py  deduplicator.py  dense_retriever.py  intent_classifier.py  metadata_filters.py  reranker.py  retrieval_pipeline.py  rrf_fusion.py
tests/: run_all.py
tests/api/: run_tests.py
tests/evaluation/: run_tests.py
tests/foundation/: run_tests.py  test_foundation.py
tests/generation/: run_tests.py
ui/: streamlit_app.py  style_helper.py
validation/: citation_validator.py  claim_extractor.py  nli_validator.py  refusal_handler.py
workflows/: full_pipeline.py
(+10 files in other folders)
